* during battles the dice are sorted according to unit type so that when you review the dice rolls, you can tell what unit rolled for which dice

* fix bug [ 1144356 ] alter email header on PBEM (this is really a feature request) (sgb)

* added new chinese units and cruiser, halftrack, marine units (iron_cross)

* fixed [ 1158469 ] Missing units in Purchase Menu when odd number of choices (sgb)

* you can now specify victory cities in xml using a territory attachement (sgb)

* added tile map drawing (sgb)

* add a copy to clipboard button on the console (sgb)

* if available, console will print stack traces when enumerating threads (sgb)

* put neutral player color in map.properties (sgb)

Change for 0.5.2.2

* fixed Dont play button on client screen. (sgb)

* threading fixes. (sgb)

Changes for 0.5.2

* add switch in map.properties to disable scrolling map around the edges (sgb)
 
* added scripted random for debugging (sgb)

* added new map by WanderingHead (wandering head)

* add confirmation prompt when exiting the game (sgb)

* jdk 1.4 - 1.5 compatability (sgb)

* Add has relief property to map.properties (sgb)

* Add default unit scroll size to map.properties (sgb)

* Changes to make TripleA compile under Sun JDK 1.5.x (George_H)

* Added better unix shell scripts for TripleA, thanks DMan for the scripts (George_H)

* Added better path search so TripleA can run from any directory (sgb)

* Now all map utils have proper "save as" dialogs (George_H)

* Added new class to prompt user to select a directory so map utils won't save files to a hardcoded dir (George_H)

* Define player colour in map.properties to allow easy modification and adding new players (sgb)

* Added option to limit ipcs lost in a territory during one round. This is necessary to implement LHTR ruleset. (Ali Ibrahim)
